Theme selection is almost fully functional

--- a/SWD/SWD/CreationWindow.xaml
+++ b/SWD/SWD/CreationWindow.xaml
@@ -6,62 +6,113 @@
         xmlns:local="clr-namespace:SWD"
         mc:Ignorable="d"
         Title="CreationWindow" 
-        MinHeight="600" 
-        Height="650" 
-        MinWidth="500" 
-        Width="500">
+        MinHeight="800" 
+        Height="800" 
+        MinWidth="600" 
+        MaxWidth="1000"
+        Width="600">
     <Grid x:Name="gdCreation">
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                <GradientStop Color="#FF97C9EF"/>
-                <GradientStop Color="#FF65ACE2" Offset="1"/>
+                <GradientStop Color="{Binding BackgroundGradEnd}"/>
+                <GradientStop Color="{Binding BackgroundGradStart}" Offset="1"/>
             </LinearGradientBrush>
         </Grid.Background>
         <Grid Margin="20">
             <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="30" />
                 <ColumnDefinition Width="2*" />
                 <ColumnDefinition Width="4*" />
+                <ColumnDefinition Width="30" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="2*" />
-                <RowDefinition Height="1*" />
-                <RowDefinition Height="1*" />
-                <RowDefinition Height="3.5*" />
-                <RowDefinition Height="3*" />
                 <RowDefinition Height="1.5*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="4*" />
+                <RowDefinition Height="3*" />
+                <RowDefinition Height="1.25*" />
             </Grid.RowDefinitions>
+            <Grid.Resources>
+                <Style TargetType="TextBox">
+                    <Setter Property="Margin" Value="0,0,0,20"/>
+                    <Setter Property="VerticalContentAlignment" Value="Center"/>
+                    <Setter Property="BorderBrush" Value="{Binding ButtonSecondary}"/>
+                    <Setter Property="BorderThickness" Value="2"/>
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="TextBox">
+                                <Border x:Name="tbContent"
+                        BorderBrush="{Binding ButtonSecondary}"
+                        BorderThickness="2"
+                        Background="White">
+                                    <ScrollViewer x:Name="PART_ContentHost"
+                                  Margin="0" />
+                                </Border>
 
-            <Label Grid.ColumnSpan="2" x:Name="lblFillTheData" Content="Fill with data" Margin="0,0,0,0" FontFamily="Century Gothic" FontSize="36" Height="60" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                <ControlTemplate.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter TargetName="tbContent" Property="BorderBrush" Value="{Binding SelectedButtonSecondary}" />
+                                    </Trigger>
+                                    <Trigger Property="IsFocused" Value="True">
+                                        <Setter TargetName="tbContent" Property="BorderBrush" Value="{Binding SelectedButtonSecondary}" />
+                                    </Trigger>
+                                </ControlTemplate.Triggers>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>                
+                <Style TargetType="ListBox">
+                    <Setter Property="Margin" Value="0,0,0,20"/>
+                    <Setter Property="BorderBrush" Value="{Binding ButtonSecondary}"/>
+                    <Setter Property="BorderThickness" Value="2"/>
+                </Style>
+                <Style TargetType="Label">
+                    <Setter Property="Margin" Value="0,0,0,20"/>
+                    <Setter Property="VerticalAlignment" Value="Stretch"/>
+                    <Setter Property="VerticalContentAlignment" Value="Top"/>
+                    <Setter Property="Foreground" Value="{Binding Font}"/>
+                    <Setter Property="FontWeight" Value="DemiBold"/>
+                </Style>
+            </Grid.Resources>
 
-            <Label Grid.Column="0" Grid.Row="1" x:Name="lblProjectTitle" Content="Project title" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Center"/>
-            <TextBox Grid.Column="1" Grid.Row="1" x:Name="tbProjectTitle" Padding="5" HorizontalAlignment="Center" Margin="0,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="260" Height="35" Grid.ColumnSpan="2" GotFocus="tb_GotFocus" LostFocus="tb_LostFocus"/>
+            <Label Grid.ColumnSpan="2" Grid.Column="1" x:Name="lblFillTheData" Content="Fill with data" FontFamily="Century Gothic" FontSize="36" Height="60" HorizontalAlignment="Center" VerticalAlignment="Center" VerticalContentAlignment="Center"/>
 
-            <Label Grid.Column="0" Grid.Row="2" x:Name="lblAuthor" Content="Author" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Center"/>
-            <TextBox Grid.Column="1" Grid.Row="2" x:Name="tbAuthor" Padding="5" HorizontalAlignment="Center" Margin="0,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="260" Height="35" Grid.ColumnSpan="2" GotFocus="tb_GotFocus" LostFocus="tb_LostFocus"/>
+            <Label Grid.Column="1" Grid.Row="1" x:Name="lblProjectTitle" Content="Project title" HorizontalAlignment="Stretch" VerticalAlignment="Center"/>
+            <TextBox Grid.Column="2" Grid.Row="1" x:Name="tbProjectTitle" Padding="5" TextWrapping="Wrap" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  GotFocus="tb_GotFocus" LostFocus="tb_LostFocus" />
 
-            <Label Grid.Column="0" Grid.Row="3" x:Name="lblKeywords" Content="Keywords" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Center"/>
-            <Grid x:Name="Griddy" Grid.Column="1" Grid.Row="3">
+            <Label Grid.Column="1" Grid.Row="2" x:Name="lblAuthor" Content="Author" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+            <TextBox Grid.Column="2" Grid.Row="2" x:Name="tbAuthor" Padding="5" TextWrapping="Wrap" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" GotFocus="tb_GotFocus" LostFocus="tb_LostFocus" />
+
+            <Label Grid.Column="1" Grid.Row="3" x:Name="lblKeywords" Content="Keywords" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+            <Grid x:Name="Griddy" Grid.Column="2" Grid.Row="3" HorizontalAlignment="Stretch" >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="50"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="2*" />
+                    <RowDefinition Height="1.35*" />
                     <RowDefinition Height="4*" />
                 </Grid.RowDefinitions>
 
-                <TextBox Grid.Column="0" Grid.Row="0" x:Name="tbKeyword" Padding="5" Margin="20,5,60,5" TextWrapping="Wrap" Width="220" VerticalAlignment="Center" AcceptsReturn="True" LostFocus="tb_LostFocus" GotFocus="tb_GotFocus"/>
-                <Button x:Name="btnAdd" Content="+" Grid.Column="0" Grid.Row="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Width="30" Height="30" Margin="230,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" Click="btnAdd_Click"/>
+                <TextBox Grid.Column="0" Grid.Row="0" x:Name="tbKeyword" Padding="5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" AcceptsReturn="True" LostFocus="tb_LostFocus" GotFocus="tb_GotFocus" PreviewKeyDown="tbKeyword_PreviewKeyDown"/>
+                <Button x:Name="btnAdd" Content="+" Grid.Column="1" Grid.Row="0" Width="40" Height="40" Margin="10,0,0,0" HorizontalAlignment="Right" VerticalAlignment="Top" Click="btnAdd_Click" />
 
-                <ListBox x:Name="lsbKeywords" Grid.Column="0" Grid.Row="1" Padding="5" Margin="20,5,60,5" Width="220">
+                <ListBox x:Name="lsbKeywords" Grid.Column="0" Grid.Row="1" Padding="5" >
+                    <ListBox.ItemContainerStyle>
+                        <Style TargetType="ListBoxItem">
+                            <Setter Property="Height" Value="30"/>
+                        </Style>
+                    </ListBox.ItemContainerStyle>
                 </ListBox>
-                <Button x:Name="btnRemove" Content="-" Grid.Column="0" Grid.Row="1" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Width="30" Height="30" Margin="230,5,0,0" HorizontalAlignment="Center" VerticalAlignment="Top" Click="btnRemove_Click"/>
+                <Button x:Name="btnRemove" Content="-" Grid.Column="1" Grid.Row="1" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Width="40" Height="40" Margin="10,0,0,0" HorizontalAlignment="Stretch" VerticalAlignment="Top" Click="btnRemove_Click"/>
             </Grid>
 
 
-            <Label Grid.Column="0" Grid.Row="4" x:Name="lblDescription" Content="Description" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Center"/>
-            <TextBox Grid.Column="1" Grid.Row="4" x:Name="tbDescription" Padding="5" HorizontalAlignment="Center" Margin="0,10,0,10" TextWrapping="Wrap" VerticalAlignment="Stretch" Width="260" Grid.ColumnSpan="2" AcceptsReturn="True" VerticalScrollBarVisibility="Visible" GotFocus="tb_GotFocus" LostFocus="tb_LostFocus"/>
+            <Label Grid.Column="1" Grid.Row="4" x:Name="lblDescription" Content="Description" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+            <TextBox Grid.Column="2" Grid.Row="4" x:Name="tbDescription" Padding="5" TextWrapping="Wrap" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" VerticalContentAlignment="Top" AcceptsReturn="True" VerticalScrollBarVisibility="Visible" GotFocus="tb_GotFocus" LostFocus="tb_LostFocus" />
 
-            <Button x:Name="btnSubmit" Grid.Row="5" Grid.ColumnSpan="2" Content="Submit" HorizontalAlignment="Center" Margin="0,0,0,0" Padding="5" Width="200" VerticalAlignment="Center" Click="btnSubmit_Click"/>
+            <Button x:Name="btnSubmit" Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="2" Content="Submit" HorizontalAlignment="Center" Padding="5" VerticalAlignment="Center" Click="btnSubmit_Click" Width="350" Height="50"/>
 
         </Grid>
     </Grid>
