--- a/SWD/SWD/App.xaml
+++ b/SWD/SWD/App.xaml
@@ -4,6 +4,44 @@
              xmlns:local="clr-namespace:SWD"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style TargetType="{x:Type Button}">
+            <Setter Property="Padding" Value="5"/>
+            <!--<Setter Property="Width" Value="350"/>-->
+            <!--<Setter Property="Height" Value="50"/>-->
+            <Setter Property="Margin" Value="0,10,0,0"/>
+            <Setter Property="Foreground" Value="{Binding ButtonFont}" />
+            <Setter Property="Background" Value="{Binding ButtonPrimary}" />
+            <Setter Property="BorderBrush" Value="{Binding ButtonSecondary}" />
+            <Setter Property="BorderThickness" Value="4" />
+            <Setter Property="VerticalAlignment" Value="Top"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="FontWeight" Value="DemiBold"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="Foreground" Value="{Binding ButtonSecondary}"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border x:Name="btnContent" BorderBrush="{Binding ButtonSecondary}" BorderThickness="4" Background="{Binding ButtonPrimary}">
+                            <ContentPresenter x:Name="cpButton" 
+                                Focusable="False" 
+                                VerticalAlignment="Center"
+                                HorizontalAlignment="Center"  
+                                RecognizesAccessKey="True" 
+                            />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" TargetName="btnContent" Value="{Binding SelectedButtonPrimary}"/>
+                                <Setter Property="BorderBrush" TargetName="btnContent" Value="{Binding SelectedButtonSecondary}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Style TargetType="{x:Type Label}">
+            <Setter Property="Margin" Value="0,0,0,10"/>
+            <Setter Property="Foreground" Value="{Binding Font}" />
+        </Style>
     </Application.Resources>
 </Application>
