--- a/SWD/SWD/Content/ContentWindow.xaml
+++ b/SWD/SWD/Content/ContentWindow.xaml
@@ -11,12 +11,17 @@
         MinWidth="1450" 
         WindowState="Maximized"
         WindowStyle="SingleBorderWindow">
+    <Window.Resources>
+        <Style TargetType="Label">
+            <Setter Property="Foreground" Value="{Binding HeaderFont}" />
+        </Style>
+    </Window.Resources>
 
     <Grid x:Name="gdContentAndBar">
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                <GradientStop Color="#FF97C9EF"/>
-                <GradientStop Color="AliceBlue" Offset="1"/>
+                <GradientStop Color="{Binding BackgroundGradStart}"/>
+                <GradientStop Color="{Binding BackgroundGradEnd}" Offset="1"/>
             </LinearGradientBrush>
         </Grid.Background>
         <Grid>
@@ -79,6 +84,7 @@
                        Margin="0,0,0,0" 
                        FontFamily="Century Gothic" 
                        FontSize="22" 
+                       Foreground="{Binding HeaderFont}"
                        HorizontalAlignment="Stretch" 
                        VerticalAlignment="Center" 
                        VerticalContentAlignment="Center" 
@@ -86,7 +92,7 @@
                     <Label.Background>
                         <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
                             <GradientStop Color="White" Offset="0" />
-                            <GradientStop Color="LightGray" Offset="1" />
+                            <GradientStop Color="{Binding HeaderSecondary}" Offset="1" />
                         </LinearGradientBrush>
                     </Label.Background>
                 </Label>
@@ -122,6 +128,7 @@
                                HorizontalContentAlignment="Center"
                                VerticalAlignment="Center"
                                BorderThickness="2"
+                               Foreground="{Binding HeaderFont}"
                                BorderBrush="LightSlateGray"
                                Background="White"
                                Margin="10"
@@ -129,21 +136,21 @@
 
                         <Label x:Name="lblColsAmount" Grid.Column="0" Grid.Row="1" Content="Amount:" HorizontalAlignment="Left" VerticalAlignment="Center"                                Margin="10,0,0,0"/>
                         <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0">
-                            <Button x:Name="btn_Col_Increase" Foreground="Gray" FontSize="12" Content="▲" Width="30" Height="30" Click="Increase_Click" />
-                            <TextBox x:Name="tbColAmount" Width="60" Height="30" Text="1" TextAlignment="Center" PreviewKeyDown="tbColAmount_PreviewKeyDown" GotFocus="PopupChange" LostFocus="PopupChange" />
+                            <Button x:Name="btn_Col_Increase" Foreground="Gray" FontSize="12" Content="▲" Width="30" Height="30" Click="Increase_Click" Margin="0" />
+                            <TextBox x:Name="tbColAmount" Width="60" Height="30" Text="1" TextAlignment="Center" VerticalAlignment="Center" PreviewKeyDown="tbColAmount_PreviewKeyDown" GotFocus="PopupChange" LostFocus="PopupChange" />
                             <Popup x:Name="popCol" Placement="Top" PlacementTarget="{Binding ElementName=tbColAmount}" IsOpen="False">
                                 <TextBlock x:Name="tbColPop" Background="AliceBlue" Padding="5">Insert value from 1 to 12 and hit enter.</TextBlock>
                             </Popup>
-                            <Button x:Name="btn_Col_Decrease" Foreground="Gray" FontSize="12" Content="▼" Width="30" Height="30" Click="Decrease_Click"/>
+                            <Button x:Name="btn_Col_Decrease" Foreground="Gray" FontSize="12" Content="▼" Width="30" Height="30" Click="Decrease_Click" Margin="0"/>
                         </StackPanel>
                         <Label x:Name="lblColsModify" Grid.Column="0" Grid.Row="2" Content="Modify at:" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0"/>
                         <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0">
-                            <Button x:Name="btn_Col_InsertAt" Foreground="Gray" FontSize="20" Content="+" Width="30" Height="30" Click="Insert_Click" FontWeight="ExtraBold"/>
+                            <Button x:Name="btn_Col_InsertAt" Foreground="Gray" FontSize="20" Content="+" Width="30" Height="30" Click="Insert_Click" FontWeight="ExtraBold" Margin="0"/>
                             <TextBox x:Name="tbColModify" Width="60" Height="30" Text="1" TextAlignment="Center" GotFocus="PopupChange" LostFocus="PopupChange" PreviewKeyDown="tbModify_PreviewKeyDown" />
                             <Popup x:Name="popColModify" Placement="Bottom" PlacementTarget="{Binding ElementName=tbColModify}" IsOpen="False">
                                 <TextBlock x:Name="tbPopColModify" Background="AliceBlue" Padding="5">Insert value from 1 to 12.</TextBlock>
                             </Popup>
-                            <Button x:Name="btn_Col_DeleteAt" Foreground="Gray" FontSize="20" Content="-" Width="30" Height="30" Click="Delete_Click" FontWeight="ExtraBold"/>
+                            <Button x:Name="btn_Col_DeleteAt" Foreground="Gray" FontSize="20" Content="-" Width="30" Height="30" Click="Delete_Click" FontWeight="ExtraBold" Margin="0"/>
                         </StackPanel>
                     </Grid>
 
@@ -171,6 +178,7 @@
                                HorizontalContentAlignment="Center"
                                VerticalAlignment="Center"
                                BorderThickness="2"
+                               Foreground="{Binding HeaderFont}"
                                BorderBrush="LightSlateGray"
                                Background="White"
                                Margin="10"></Label>
@@ -178,22 +186,22 @@
                         <Label x:Name="lblRowAmount" Content="Amount:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="0" Grid.Row="1" Margin="10,0,0,0"></Label>
                         <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="Right" Width="Auto" Margin="0,0,10,0">
                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                                <Button x:Name="btn_Row_Increase" Foreground="Gray" FontSize="12" Content="▲" Width="30" Height="30" Click="Increase_Click" HorizontalAlignment="Right"/>
+                                <Button x:Name="btn_Row_Increase" Foreground="Gray" FontSize="12" Content="▲" Width="30" Height="30" Click="Increase_Click" HorizontalAlignment="Right" Margin="0"/>
                                 <TextBox x:Name="tbRowAmount" Width="60" Height="30" Text="1" TextAlignment="Center" LostFocus="PopupChange" GotFocus="PopupChange" PreviewKeyDown="tbRowAmount_PreviewKeyDown" HorizontalAlignment="Right"/>
                                 <Popup x:Name="popRow" Placement="Top" PlacementTarget="{Binding ElementName=tbRowAmount}" IsOpen="False">
                                     <TextBlock x:Name="tbRowPop" Background="AliceBlue" Padding="5">Insert a numeric value and hit enter.</TextBlock>
                                 </Popup>
-                                <Button x:Name="btn_Row_Decrease" Foreground="Gray" FontSize="12" Content="▼" Width="30" Height="30" Click="Decrease_Click" HorizontalAlignment="Right"/>
+                                <Button x:Name="btn_Row_Decrease" Foreground="Gray" FontSize="12" Content="▼" Width="30" Height="30" Click="Decrease_Click" HorizontalAlignment="Right" Margin="0"/>
                             </StackPanel>
                         </StackPanel>
                         <Label x:Name="lblRowsModify" Content="Modify at:" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0"></Label>
                         <StackPanel Orientation="Horizontal" Grid.Column="2" Grid.Row="2" Grid.ColumnSpan="2"  HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0">
-                            <Button x:Name="btn_Row_InsertAt" Foreground="Gray" FontSize="20" Content="+" Width="30" Height="30" Click="Insert_Click" FontWeight="ExtraBold"/>
+                            <Button x:Name="btn_Row_InsertAt" Foreground="Gray" FontSize="20" Content="+" Width="30" Height="30" Click="Insert_Click" FontWeight="ExtraBold" Margin="0"/>
                             <TextBox x:Name="tbRowModify" Width="60" Height="30" Text="1" TextAlignment="Center" LostFocus="PopupChange" GotFocus="PopupChange" PreviewKeyDown="tbModify_PreviewKeyDown"/>
                             <Popup x:Name="popRowModify" Placement="Bottom" PlacementTarget="{Binding ElementName=tbRowModify}" IsOpen="False">
                                 <TextBlock x:Name="tbPopRowModify" Background="AliceBlue" Padding="5">Insert a numeric value.</TextBlock>
                             </Popup>
-                            <Button x:Name="btn_Row_DeleteAt" Foreground="Gray" FontSize="20" Content="-" Width="30" Height="30" Click="Delete_Click" FontWeight="ExtraBold"/>
+                            <Button x:Name="btn_Row_DeleteAt" Foreground="Gray" FontSize="20" Content="-" Width="30" Height="30" Click="Delete_Click" FontWeight="ExtraBold" Margin="0"/>
                         </StackPanel>
                     </Grid>
 
@@ -222,7 +230,8 @@
                            HorizontalAlignment="Stretch"
                            HorizontalContentAlignment="Center"
                            VerticalAlignment="Center"
-                           BorderThickness="2"
+                           BorderThickness="2"                                         
+                           Foreground="{Binding HeaderFont}"
                            BorderBrush="LightSlateGray"
                            Background="White"
                            Margin="10"
@@ -296,7 +305,7 @@
                     Loaded="dgContent_Loaded"
                     SelectedCellsChanged="dgContent_SelectedCellsChanged"
                     PreviewKeyDown="dgContent_PreviewKeyDown"
-                    BorderBrush="#FF458BC0"
+                    BorderBrush="{Binding ButtonSecondary}"
                     BorderThickness="4"
                     
                     EnableRowVirtualization="True" 
@@ -417,7 +426,7 @@
                     SelectionUnit="Cell" 
                     LoadingRow="dgPages_LoadingRow"
                     AutoGeneratingColumn="dgPages_AutoGeneratingColumn"
-                    BorderBrush="#FF458BC0"
+                    BorderBrush="{Binding ButtonSecondary}"
                     BorderThickness="4"
                     Background="#88FFFFFF"
                           >
