--- a/SWD/SWD/MainWindow.xaml
+++ b/SWD/SWD/MainWindow.xaml
@@ -21,30 +21,12 @@
             </LinearGradientBrush>
         </Grid.Background>
 
-        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-            <StackPanel.Resources>
-                <Style TargetType="{x:Type Button}">
-                    <Setter Property="Margin" Value="0,10,0,0"/>
-                    <Setter Property="Width" Value="350"/>
-                    <Setter Property="Height" Value="50"/>
-                    <Setter Property="Padding" Value="5"/>
-                    <Setter Property="Foreground" Value="{Binding ButtonFont}" />
-                    <Setter Property="Background" Value="{Binding ButtonPrimary}" />
-                    <Setter Property="BorderBrush" Value="{Binding ButtonSecondary}" />
-                    <Setter Property="BorderThickness" Value="4" />
-                    <Setter Property="VerticalAlignment" Value="Top"/>
-                    <Setter Property="HorizontalAlignment" Value="Center"/>
-                </Style>
-                <Style TargetType="{x:Type Label}">
-                    <Setter Property="Margin" Value="0,0,0,10"/>
-                </Style>
-            </StackPanel.Resources>
+        <StackPanel x:Name="spMain" VerticalAlignment="Center" HorizontalAlignment="Center">
             <Label x:Name="lblMainTitle" Content="SimpleWebpageDesigner" FontFamily="Century Gothic" FontSize="36" Height="60" HorizontalAlignment="Center" VerticalAlignment="Top" FontWeight="SemiBold"/>
-            <Button x:Name="btnNewProject" Content="New project" Click="btnNewProject_Click" />
-            <Button x:Name="btnOpenExisting" Content="Open existing" HorizontalAlignment="Center"/>
-            <Button x:Name="btnDeleteExisting" Content="Delete existing" Click="btnDeleteExisting_Click"/>
-            <Button x:Name="btnThemeSettings" Content="Theme settings" Click="btnThemeSettings_Click"/>
-            
+            <Button x:Name="btnNewProject" Content="New project" Click="btnNewProject_Click" Width="350" Height="50"/>
+            <Button x:Name="btnOpenExisting" Content="Open existing" HorizontalAlignment="Center" Width="350" Height="50"/>
+            <Button x:Name="btnDeleteExisting" Content="Delete existing" Click="btnDeleteExisting_Click" Width="350" Height="50"/>
+            <Button x:Name="btnThemeSettings" Content="Theme settings" Click="btnThemeSettings_Click" Width="350" Height="50"/>
         </StackPanel>
     </Grid>
 </Window>
